--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "@types/react-gtm-module": "^2.0.1",
     "axios": "^1.1.3",
     "next": "13.0.0",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
