--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.1",
     "lucide-react": "^0.220.0",
     "next": "13.4.2",
     "postcss": "^8.4.23",
@@ -20,7 +21,8 @@
     "react-dom": "^18.2.0",
     "schema-dts": "^1.1.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
