--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "prettier": "2.2.0",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
