--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "10.3.1",
     "lucide-react": "0.220.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
