--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "autoprefixer": "10.4.14",
     "axios": "1.4.0",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^14.0.4",
     "firebase": "10.3.1",
     "lucide-react": "0.220.0",
-    "next": "13.4.2",
+    "next": "^14.0.4",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "schema-dts": "1.1.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
@@ -28,8 +28,8 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "18.11.7",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "prettier": "2.2.0",
     "prettier-plugin-tailwindcss": "0.3.0"
   }
