--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@vercel/analytics": "1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "1.4.0",
+    "clsx": "^2.1.1",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^14.0.4",
     "firebase": "10.3.1",
     "lucide-react": "0.220.0",
-    "next": "13.4.2",
+    "next": "^14.0.4",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "schema-dts": "1.1.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zod": "3.21.4"
@@ -32,5 +34,6 @@
     "@types/react-dom": "18.0.8",
     "prettier": "2.2.0",
     "prettier-plugin-tailwindcss": "0.3.0"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
