feat: implements blog feature

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@
 .pnp.js
 yarn.lock
 .yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # testing
 /coverage
