--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
+    "disqus-react": "^1.1.5",
     "eslint": "8.40.0",
     "eslint-config-next": "^14.0.4",
     "firebase": "10.3.1",
+    "lodash": "^4.17.21",
     "lucide-react": "0.220.0",
     "next": "^14.0.4",
     "postcss": "8.4.23",
@@ -24,11 +32,13 @@
     "schema-dts": "1.1.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
+    "@types/lodash": "^4",
     "@types/node": "18.11.7",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
