--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/third-parties": "^14.2.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/analytics": "1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "1.4.0",
