--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "1.2.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/lodash": "^4",
     "@types/node": "18.11.7",
     "@types/react": "^18.2.46",
